--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-statoPostazioni.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-statoPostazioni.tex
@@ -6,6 +6,12 @@
   \caption{Stato prenotazioni}
 \end{figure}
 
+\begin{figure}[H]
+	\centering
+	  \includegraphics[scale=0.65]{src/CasiDUso/immagini/PostazioniStanze.png}
+	\caption{Stato prenotazioni}
+  \end{figure}
+
 Il presente diagramma vuole riassumere la possibilità di prenotazione delle prenotazioni da parte di un utilizzatore dell’applicazione.
 
 \begin{itemize}
@@ -78,7 +84,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 \subsection{UC-24 Contrassegna postazione abilitata}
 
 \begin{itemize}
-\item \textbf{Attori primari:} amministratore;
+\item \textbf{Attori primari:} amministratore autenticato;
 \item \textbf{Descrizione:} l’amministratore può marcare la postazione precedentemente selezionata come “disabilitata”, nuovamente abilitata, quindi servibile ed occupabile dagli utenti;
 \item \textbf{Precondizione:} l’amministratore naviga nell’apposita sezione di gestione della postazione; 
 \item \textbf{Postcondizione:} l’amministratore ha marcato con successo una postazione, precedentemente disabilitata, come abilitata;
