--- a/DocumentiEsterni/Glossario/src/Alfabeto/F.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/F.tex
@@ -1,6 +1,6 @@
 \section{F}
 \TermineGlossario{Fase}
-\DefinizioneGlossario{Tempo che intercorre fra due milestone nel ciclo di vita del software.}
+\DefinizioneGlossario{Tempo che intercorre fra due milestone nel ciclo di vita del software, si intende una classica fase di sviluppo.}
 
 \TermineGlossario{FIFO}
 \DefinizioneGlossario{Acronimo di di First In First Out. Il metodo FIFO rappresenta la modalità di immagazzinamento di oggetti fisici in cui il primo oggetto introdotto è il primo ad uscire.}
