--- a/DocumentiEsterni/Glossario/src/Alfabeto/S.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/S.tex
@@ -20,9 +20,6 @@
 \TermineGlossario{Smart Contract Ethereum}
 \DefinizioneGlossario{È il codice che viene eseguito sul Ethereum Virtual Machine (EVM). Esso può accettare ed archiviare Ethereum, dati o la combinazione di entrambi distribuendoli ad altri account o persino ad altri smart contract.}
 
-\TermineGlossario{Snake Case}
-\DefinizioneGlossario{Formato di scrittura di identificatori (tipicamente di nomi di file o di variabili) in cui le parole che li compongono, in minuscolo, sono separati da trattini bassi.}
-
 \TermineGlossario{Solidity}
 \DefinizioneGlossario{È un linguaggio di programmazione orientato agli oggetti per la scrittura di smart contract. Viene utilizzato per implementare smart contract su varie piattaforme di blockchain, in particolare Ethereum.}
 
@@ -40,7 +37,7 @@ Spring Batch. Questi progetti sono stati ideati per fornire funzionalità aggiun
 \DefinizioneGlossario{Strumento per la generazione automatica di codice Java a partire dalla sua rappresentazione UML; è possibile, inoltre, effettuare l'operazione inversa (reverse engineer) del codice Java sorgente per produrre il diagramma UML corrispondente.}
 
 \TermineGlossario{Stadio} 
-\DefinizioneGlossario{Si intende la sotto-fase relativa alla pianificazione del progetto \NomeProgetto{} da parte del gruppo \Gruppo{}.}
+\DefinizioneGlossario{Si intende la sotto-fase relativa alla pianificazione del progetto \NomeProgetto{} da parte del gruppo \Gruppo{}. Da considerarsi come delle \glo{milestone} minori, con relativi obiettivi che il gruppo intende raggiungere entro la fine delle stesse.}
 
 \TermineGlossario{Stream}
 \DefinizioneGlossario{È un "canale" tra la sorgente e la destinazione attraverso il quale fluiscono i dati.}
