--- a/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoCodifica.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoCodifica.tex
@@ -2,9 +2,9 @@
 \subsubsection{Bilancio}
 
 {
-\rowcolors{2}{grigetto}{white}
+\rowcolors{2}{\primaryColor}{\secondaryColor}
 \renewcommand{\arraystretch}{2}
-\begin{longtable}[h]{ C{2.5cm} C{2.5cm} C{2.5cm} C{2.5cm} C{1.5cm} C{2.5cm}}
+\begin{longtable}[h]{ C{2.5cm} C{2cm} C{2cm} C{2.5cm} C{1.5cm} C{2.5cm}}
 \caption{Tabella del costo complessivo per ruolo}\\
 \rowcolor{darkblue}
 
