--- a/DocumentiEsterni/PianoDiQualifica/src/Autovalutazione/src/Valutazione_ruoli.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/Autovalutazione/src/Valutazione_ruoli.tex
@@ -1,9 +1,8 @@
-\begin{table}[H]
-    \caption{Tabella delle problematiche relative ai ruoli}	
     \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{1.5}
 \begin{longtable}{  >{\centering}p{0.15\textwidth} >{}p{0.30\textwidth}
     >{\centering}p{0.1075\textwidth} >{}p{0.30\textwidth}}
+    \caption{Tabella delle problematiche relative ai ruoli}	\\
     \rowcolor{\primaryColor}
     \textcolor{\secondaryColor}{
     \centering\textbf{Problema}}     & \textcolor{\secondaryColor}{\centering\textbf{Descrizione}}    & \textcolor{\secondaryColor}
@@ -18,4 +17,3 @@
     & 3
     & Aumentare il carico di lavoro e il numero degli analisti. \\
     \end{longtable}
-\end{table}
