--- a/DocumentiEsterni/letteraDiPresentazioneRR/main.tex
+++ b/DocumentiEsterni/letteraDiPresentazioneRR/main.tex
@@ -5,7 +5,6 @@
 \usepackage{longtable}
 \usepackage{booktabs}
 \usepackage{../../Shared/Sweleven}
-\usepackage{lmodern}
 
 
 \signature{}
@@ -32,7 +31,7 @@
             Corso di Ingegneria del Software\\ Gruppo \Gruppo{}\\ 
         \end{flushleft}
         }
-        \opening{ Con la presente il gruppo \Gruppo{} intende comunicarvi la scelta e l'impegno alla realizzazione del progetto da voi commissionato, denominato:}
+        \opening{ Con la presente, il gruppo \Gruppo{} intende comunicarvi la scelta e l'impegno alla realizzazione del progetto da voi commissionato, denominato:}
         \begin{center}
            \textbf{\NomeProgetto{}} 
         \end{center}
@@ -55,15 +54,16 @@
         Inoltre sono presenti i verbali esterni ed interni:
         \begin{itemize}
             
-            \item Verbale\_I\_\_2020\_10\_31;
+            \item Verbale\_I\_2020\_10\_31;
+            \item Verbale\_I\_2020\_11\_12;
             \item Verbale\_I\_2020\_12\_11;
             \item Verbale\_E\_2020\_12\_18;
             \item Verbale\_I\_2020\_12\_22;
            \item Verbale\_I\_2021\_01\_05;
            \item Verbale\_I\_2021\_01\_10.
         \end{itemize}
-        Il gruppo stima di consegnare il prodotto entro il 2021-05-03 con un preventivo di \euro{} 13.264,00, come specificato nel documento \PdP{}.\\
-        Per completezza, inseriamo di seguito la lista dei membri del gruppo, con nome, cognome, matricola e ruolo principale fino a questo momento.
+        Il gruppo stima di consegnare il prodotto entro il 2021-05-03 con un preventivo di \euro{} 13.264,00, come specificato nel documento \PdPv{}.\\
+        Per completezza, inseriamo di seguito la lista dei membri del gruppo con nome, cognome, matricola e ruolo principale fino a questo momento.
         {
             \rowcolors{2}{\evenRowColor}{\oddRowColor}
             \renewcommand{\arraystretch}{2}
@@ -81,6 +81,6 @@
             \end{longtable}
         }
         Cordiali saluti,
-        \closing{\GG{} \\ \textit{\responsabile{}}\\ \includegraphics[width=.6\linewidth]{../PianodiProgetto/src/Organigramma/immagini/firme/giovanni.png}}
+        \closing{\textit{\responsabile{}}\\ \includegraphics[width=.5\linewidth]{./immagini/firme/giovanni.png}}
     \end{letter}
 \end{document}
