--- a/DocumentiInterni/Verbali/Verbale_I_2020-12-22/src/Informazioni/src/OrdineDelGiorno/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2020-12-22/src/Informazioni/src/OrdineDelGiorno/main.tex
@@ -1,4 +1,4 @@
 \begin{enumerate}
-    \item Discutere sulla verifica delle norme di progetto;
-    \item Discutere sulla verifica degli studi di fattibilità.
+    \item discutere sulla verifica delle norme di progetto;
+    \item discutere sulla verifica degli studi di fattibilità.
 \end{enumerate}
