--- a/DocumentiInterni/Verbali/Verbale_I_2021-01-10/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-01-10/main.tex
@@ -6,6 +6,10 @@
 \begin{document}
     \copertina{}
 
+    \newpage
+    \tableofcontents
+
+    \newpage
     \section*{Registro delle modifiche}\label{sec:Registro-modifiche}
     \input{src/RegistroModifiche.tex}
     
