--- a/DocumentiEsterni/Glossario/src/Alfabeto/D.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/D.tex
@@ -10,7 +10,7 @@
 
 
 \TermineGlossario{Deliverable}
-\DefinizioneGlossario{Indica un risultato significativo che deve essere conseguito durante il progetto e fornito al committente. Può essere un oggetto materiale oppure un documento.}
+\DefinizioneGlossario{Indica uno o un insieme di risultati significativi che deve essere conseguito durante il progetto e fornito al committente, quindi soggetto a controllo. Può essere un oggetto materiale oppure un documento.}
 
 \TermineGlossario{Design}
 \DefinizioneGlossario{In italiano progettazione è un piano o una specifica per la costruzione di un oggetto o sistema o per l'implementazione di un'attività o di un processo, o (in alcuni casi ex.artigiano)il risultato di quel piano o specifica sotto forma di prototipo, prodotto o processo}
