--- a/DocumentiEsterni/PianoDiQualifica/src/Autovalutazione/src/Valutazione_organizzazione.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/Autovalutazione/src/Valutazione_organizzazione.tex
@@ -1,9 +1,8 @@
-\begin{table}[H]
-    \caption{Tabella delle problematiche relative all'organizzazione}
-    \rowcolors{2}{\evenRowColor}{\oddRowColor}
+\rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{1.5}
 \begin{longtable}{  >{\centering}p{0.15\textwidth} >{}p{0.30\textwidth}
     >{\centering}p{0.1075\textwidth} >{}p{0.30\textwidth}}
+    \caption{Tabella delle problematiche relative all'organizzazione}\\
     \rowcolor{\primaryColor}
     \textcolor{\secondaryColor}{
     \centering\textbf{Problema}}     & \textcolor{\secondaryColor}{\centering\textbf{Descrizione}}    & \textcolor{\secondaryColor}
@@ -22,4 +21,4 @@
     & L’azienda proponente non ha avuto molte difficoltà a proporci 
     diversi orari per i nostri incontri affinché l’intero gruppo fosse presente.{} \\
     \end{longtable}
-\end{table}
+% \end{table}
