--- a/DocumentiEsterni/PianoDiQualifica/src/ResocontoVerifica/src/Esiti_verifiche_automatizzate.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/ResocontoVerifica/src/Esiti_verifiche_automatizzate.tex
@@ -1,10 +1,9 @@
 Nella seguente tabella vengono riportati gli indici Gulpease\glo{} di tutti
 i documenti prodotti finora.
-\begin{table}[H]
-    \caption{Tabella dell'indice di Gulpease}
     \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{1.5}
 \begin{longtable}{ c c  C{4cm}  c  c }
+    \caption{Tabella dell'indice di Gulpease} \\
     \rowcolor{\primaryColor}
     \textcolor{\secondaryColor}{
     \centering\textbf{Documento}}     & \textcolor{\secondaryColor}{\centering\textbf{Indice Gulpease}}    & \textcolor{\secondaryColor}
@@ -15,13 +14,15 @@ i documenti prodotti finora.
     \textit{Piano di Progetto v1.0.0}                & 64                                    & Superato{} \\
     \textit{Piano di Qualifica v1.0.0}                & 59                                    & Superato{} \\
     \textit{Studio di Fattibilità v1.0.0}               & 69                                    & Superato{} \\
+    \textit{Verbale Interno 2020-10-31 v1.0.0}          & 72                                    & Superato{} \\
+    \textit{Verbale Interno 2020-11-12 v1.0.0}          & 69                                    & Superato{} \\
     \textit{Verbale Interno 2020-12-11 v1.0.0}          & 73                                    & Superato{} \\
+    \textit{Verbale Esterno 2020-12-18 v1.0.0}          & 76                                    & Superato{} \\
     \textit{Verbale Interno 2020-12-22 v1.0.0}          & 71                                    & Superato{} \\
     \textit{Verbale Interno 2021-01-05 v1.0.0}          & 74                                    & Superato{} \\
     \textit{Verbale Interno 2021-01-10 v1.0.0}          & 70                                    & Superato{} \\
-    \textit{Verbale Esterno 2020-12-18 v1.0.0}          & 76                                    & Superato{} \\
+
 \end{longtable}
-\end{table}
 
 
 
