--- a/DocumentiInterni/Verbali/Verbale_I_2020-12-22/src/TracciamentoDecisioni/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2020-12-22/src/TracciamentoDecisioni/main.tex
@@ -1,5 +1,5 @@
 \begin{enumerate}
-    \item Unifomare gli stili dei documenti;
-    \item Inserire i commenti delle revisioni sulla Pull Request;
-    \item Rotazione del responsabile tra le revisioni.
+    \item unifomare gli stili dei documenti;
+    \item inserire i commenti delle revisioni sulla Pull Request;
+    \item rotazione del responsabile tra le revisioni.
 \end{enumerate}
