comandi nomi+verbale 29/01/2021

--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -71,7 +71,13 @@
 }
 
 \renewcommand{\labelitemii}{$\circ$} % Per avere le liste di secondo livello con i bullet a cerchio
-
+\newcommand{\AD}{Andrea De Tomasi}
+\newcommand{\AT}{Alessio Trevisan}
+\newcommand{\AW}{Abdelwahad Kandoul}
+\newcommand{\EC}{Edoardo Caregnato}
+\newcommand{\EM}{Elvis Murtezan}
+\newcommand{\FP}{Filippo Pinton}
+\newcommand{\GG}{Giovanni Grigoletto}
 % variabili - ruoli
 
 \newcommand{\amministratore}{\emph{Amministratore}}
