--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/main.tex
@@ -1,77 +1,6 @@
 \subsection{Classificazione}
-In seguito all'individuazione dei casi d'uso, all'analisi dei documenti di presentazione del capitolato e agli incontri svolti con il proponente, gli analisti del gruppo \Gruppo{} hanno individuato i requisiti del prodotto che sar\`{a} sviluppato. Tali requisiti sono stati raggruppati in:
-
-\begin{itemize}
-    \item \textbf{Requisiti funzionali:} insieme di requisiti che definiscono le azioni fondamentali che devono avvenire in grado di processare un input e di generare un output;
-    \item  \textbf{Requisiti dichiarativi:} insieme di requisiti che rappresentano un vincolo di natura realizzativa, normativa o contrattuale;
-    \item \textbf{Requisiti qualitativi:} insieme di requisiti che garantiscono una certa qualit\`{a} al prodotto e che indicano le best practice usate per la realizzazione.
-\end{itemize}
-
-Inoltre, ad ogni requisito \`{e} stata assegnata un'importanza:
-
-\begin{itemize}
-    \item \textbf{Obbligatori:} requisito irrinunciabile poich\'{e} indispensabile per il corretto funzionamento del prodotto;
-    \item \textbf{Desiderabile:} requisito non necessario che rappresenterebbe un notevole valore aggiunto;
-    \item \textbf{Facoltativo:} requisito poco utile contrattabile con il proponente.
-\end{itemize}
-
-
-
+\input{src/Requisiti/src/Classificazione.tex}
 \subsection{Requisiti funzionali}
-\rowcolors{2}{\evenRowColor}{\oddRowColor}
-\renewcommand{\arraystretch}{1.5}
-\begin{longtable}{ c C{9cm} c }
-    \caption{Tabella classificazione requisiti}\\
-    \rowcolor{\primaryColor}
-    \textcolor{\secondaryColor}{
-    \textbf{Identificativo}} & \textcolor{\secondaryColor}{\textbf{Descrizione}}                                                            & \textcolor{\secondaryColor}
-    {\textbf{Fonte}}                                                                                                                                                      \\
-
-    % R-1-F-0                  & Il sistema deve permettere ad un amministratore di accedere al portale web                                   & ...                         \\
-    % R-1.1-F-0                & Il sistema deve permettere ad un amministratore di inserire la propria mail con la quale si \`{e} registrato & ...                         \\
-    % X.X.X                    & XXXX-XX-XX                                                                                                   & ...                         \\
-
-    R-1-F-O & Il sistema deve permettere l'inserimento di un nuovo utente & UC-1 \\
-    R-1.1-F-O & Il sistema deve permettere l'inserimento del nome del nuovo utente & UC-1.1 \\
-    R-1.2-F-O & Il sistema deve permettere l'inserimento del cognome del nuovo utente & UC-1.2 \\
-    R-1.3-F-O & Il sistema deve permettere l'inserimento dell'email del nuovo utente & UC-1.3 \\
-    R-2-F-O & Il sistema deve permettere la creazione di una password personale & UC-4 \\
-    R-3-F-O & Il sistema deve permettere ad un utente registrato il login tramite applicazione mobile & UC-7 \\
-    R-4-F-O & Il sistema deve permettere ad un amministratore non autenticato il login tramite applicazione web & UC-8 \\
-    R-5-F-O & Il sistema deve permettere ad un utente autenticato di fare il logout & UC-10 \\
-    R-6-F-D & Il sistema deve permettere di visualizzare il profilo personale dell'utente attualmente autenticato da applicazione mobile & UC-11 \\
-    R-6.1-F-D & Il sistema deve permettere di visualizzare il nome dell'utente attualmente autenticato da applicazione mobile & UC-11.1 \\
-    R-6.2-F-D & Il sistema deve permettere di visualizzare il cognome dell'utente attualmente autenticato da applicazione mobile & UC-11.2 \\
-    R-7-F-O & Il sistema deve permettere ad un amministratore autenticato di visualizzare il profilo degli utenti registrati attraverso l'applicazione web & UC-12 \\
-    R-7.1-F-D & Il sistema deve permettere ad un amministratore autenticato di visualizzare il nome degli utenti registrati attraverso applicazione web & UC-12.1 \\
-    R-7.2-F-D & Il sistema deve permettere ad un amministratore autenticato di visualizzare il cognome degli utenti registrati attraverso applicazione web & UC-12.2 \\
-    R-7.3-F-D & Il sistema deve permettere ad un amministratore autenticato di visualizzare l'email degli utenti registrati attraverso applicazione web & UC-12.3 \\
-    R-8-F-F & Il sistema deve permettere la modifica del profilo personale dell'utente attualmente autenticato attraverso l'applicazione mobile & UC-13 \\
-    R-8.1-F-F & Il sistema deve permettere la modifica del nome dell'utente attualmente autenticato attraverso l'applicazione mobile & UC-13.1 \\
-    R-8.2-F-F & Il sistema deve permettere la modifica del cognome dell'utente attualmente autenticato attraverso l'applicazione mobile & UC-13.2 \\
-    R-9-F-O & Il sistema deve permettere la cancellazione del profilo dell'utente attualmente autenticato attraverso l'applicazione mobile & UC-15 \\
-    R-10-F-O & Il sistema deve permettere la creazione di una prenotazione da parte del personale interno autenticato attraverso l'applicazione mobile & UC-16 \\
-    R-10.1-F-O & Il sistema deve permettere la selezione della data per cui effettuare la prenotazione & UC-16.1 \\
-    R-10.2-F-O & Il sistema deve permettere la selezione della stanza per cui effettuare la prenotazione & UC-16.2 \\
-    R-10.3-F-O & Il sistema deve permettere la selezione della postazione per cui effettuare la prenotazione & UC-16.3 \\
-    R-10.4-F-O & Il sistema deve permettere la selezione dell'ora per cui effettuare la prenotazione & UC-16.4 \\
-    R-11-F-O & Il sistema deve permettere la modifica di una prenotazione precedentemente effettuata & UC-17 \\
-    R-12-F-O & Il sistema deve permettere la cancellazione di una prenotazione precedentemente effettuata & UC-18 \\
-    R-13-F-D & Il sistema deve permettere la visualizzazione delle prenotazioni effettuate & UC-20 \\
-    R-14-F-O & Il sistema deve permettere la marcatura di una postazione come "igienizzata" & UC-21 \\
-    R-15-F-O & Il sistema deve marcare una postazione come "sporca" nel momento in cui viene occupata & UC-22 \\
-    R-16-F-O & Il sistema deve permettere di marcare una postazione come "occupata" & UC-23 \\
-    R-17-F-O & Il sistema deve permettere ad un amministratore autenticato di contrassegnare una postazione come abilitata & UC-24 \\
-    R-18-F-O & Il sistema deve permettere ad un amministratore autenticato di aggiungere una postazione & UC-25 \\
-    R-19-F-O & Il sistema deve permettere ad un amministratore autenticato la disabilitazione di una postazione & UC-26 \\
-    R-20-F-O & Il sistema deve permettere ad un amministratore autenticato la rimozione di una postazione & UC-27 \\
-    R-21-F-D & Il sistema deve permettere ad un amministratore autenticato la visualizzazione dello storico di una postazione & UC-28 \\
-    R-22-F-O & Il sistema deve permettere ad un amministratore autenticato lo scaricamento di report dello storico di una postazione & UC-29 \\
-    R-23-F-O & Il sistema deve permettere ad un amministratore autenticato di aggiungere una stanza & UC-30 \\
-    R-24-F-O & Il sistema deve permettere ad un amministratore autenticato la disabilitazione di una stanza & UC-31 \\
-    R-25-F-O & Il sistema deve permettere ad un amministratore autenticato la rimozione di una stanza & UC-32 \\
-    R-26-F-D & Il sistema deve permettere ad un amministratore autenticato la visualizzazione dello storico di una stanza & UC-33 \\
-    R-27-F-O & Il sistema deve permettere ad un amministratore autenticato lo scaricamento di report dello storico di una stanza & UC-34 \\
-    R-28-F-O & Il sistema deve permettere ad un igienizzatore di marcare una postazione come "igienizzata" & UC-35 \\
-    R-29-F-O & Il sistema deve permettere ad un igienizzatore di marcare una stanza come "igienizzata" & UC-36 \\
-\end{longtable}
+\input{src/Requisiti/src/RequisitiFunzionali.tex}
+\subsection{Requisiti di vincolo}
+\input{src/Requisiti/src/RequisitiDiVincolo.tex}
