--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiQualitativi.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiQualitativi.tex
@@ -1,7 +1,7 @@
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{1.5}
 \begin{longtable}{ c C{9cm} c }
-    \caption{Tabella classificazione requisiti di vincolo}\\
+    \caption{Tabella classificazione requisiti qualitativi}\\
     \rowcolor{\primaryColor}
     \textcolor{\secondaryColor}{
     \textbf{Identificativo}} & \textcolor{\secondaryColor}{\textbf{Descrizione}}                                                            & \textcolor{\secondaryColor}
@@ -11,9 +11,8 @@
     % R-1.1-F-0                & Il sistema deve permettere ad un amministratore di inserire la propria mail con la quale si \`{e} registrato & ...                         \\
     % X.X.X                    & XXXX-XX-XX                                                                                                   & ...                         \\
 
-    R-1-V-O     & L'applicazione mobile sviluppata deve essere disponibile per il sistema per Android & Capitolato\\
-    R-2-V-O     & Deve essere sviluppata un applicazione web utilizzabile dall'amministratore & Capitolato\\
-    R-3-V-F     & Il sistema è composto da microservizi & Capitolato\\
-    R-4-V-F     & Il sistema utilizza TODO NOME per connettersi alla rete Ethereum & Capitolato\\
-    R-5-V-O     & Devono essere previsti testi di unità e di integrazione & Capitolato\\
+    R-1-Q-O     & La progettazione e la codifica devono rispettare le norme e le metriche definite nei documenti \emph{Norme di Progetto} e \emph{Piano di Qualifica} & Interno\\
+    R-2-Q-O     & Il codice sorgente, i test e la documentazione deve essere disponibile su un sistema di versionamento, come Gitlab & Capitolato\\
+    R-3-Q-O     & Il sistema deve essere pubblicato con licenza open source & Capitolato\\
+
 \end{longtable}
