--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiQualitativi.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiQualitativi.tex
@@ -11,8 +11,17 @@
     % R-1.1-F-0                & Il sistema deve permettere ad un amministratore di inserire la propria mail con la quale si \`{e} registrato & ...                         \\
     % X.X.X                    & XXXX-XX-XX                                                                                                   & ...                         \\
 
-    R-1-Q-O     & La progettazione e la codifica devono rispettare le norme e le metriche definite nei documenti \emph{Norme di Progetto} e \emph{Piano di Qualifica} & Interno\\
+    R-1-Q-O     & La progettazione e la codifica devono rispettare le norme e le metriche definite nei documenti \emph{Norme di Progetto v2.0.0} e \emph{Piano di Qualifica V2.0.0} & Interno\\
     R-2-Q-O     & Il codice sorgente, i test e la documentazione deve essere disponibile su un sistema di versionamento, come Gitlab & Capitolato\\
     R-3-Q-O     & Il sistema deve essere pubblicato con licenza open source & Capitolato\\
+    R-4-Q-O     & Deve essere prodotto un manuale sviluppatore & Interno \\
+    R-5-Q-O     & Deve essere regatta la documentazione sulle scelte progettuali effettuate & Capitolato \\
+    R-6-Q-O     & E' fondamentale testare ogni prodotto software in ogni suo sistema di riferimento e interazione tra le sue parti con testi di unità e di integrazione e di sistema & Capitolato\\
+    R-6.1-Q-O   & E' fondamentale fornire test di unità per ogni componente applicativo & Capitolato \\
+    R-6.2-Q-O   & E' fondamentale fornire test di integrazione per ogni componente applicativo & Capitolato \\
+    R-6.3-Q-O   & E' fondamentale testare il sistema con test di sistema & Capitolato \\
+
+
+
 
 \end{longtable}
