aggiunta requisiti qualita

--- a/DocumentiEsterni/AnalisiDeiRequisiti/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/main.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, oneside, openany, dvipsnames, table]{article}
+\documentclass[a4paper, oneside, dvipsnames, table]{article}
 \usepackage{../../Shared/Sweleven}
 \usepackage{grffile}
 \usepackage{graphics}
