--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiQualitativi.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiQualitativi.tex
@@ -20,6 +20,10 @@
     R-6.1-Q-O   & E' fondamentale fornire test di unità per ogni componente applicativo & Capitolato \\
     R-6.2-Q-O   & E' fondamentale fornire test di integrazione per ogni componente applicativo & Capitolato \\
     R-6.3-Q-O   & E' fondamentale testare il sistema con test di sistema & Capitolato \\
+    R-7-Q-O     & Il sistema deve visualizzare un messaggio di errore in caso i dati richiesti in input non siano validi & Interno \\
+    R-7.1-Q-O   & Il sistema deve visualizzare un messaggio di errore in caso di inserimento di una stringa non valida per campi dati contenenti informazioni anagrafiche & UC-4 \\
+    R-7.2-Q-O   & Il sistema deve visualizzare un messaggio di errore in caso di inserimento di un indirizzo e-mail non valido durante la registrazione di un nuovo utente & UC-5 \\
+    R-7.3-Q-O   & Il sistema deve visualizzare un messaggio di errore in caso di inserimento di una password non valida durante la fase di registrazione & UC-6 \\
 
 
 
