--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/main.tex
@@ -4,5 +4,5 @@
 \input{src/Requisiti/src/RequisitiFunzionali.tex}
 \subsection{Requisiti di vincolo}
 \input{src/Requisiti/src/RequisitiDiVincolo.tex}
-\subsection*{Requisiti qualitativi}
+\subsection{Requisiti qualitativi}
 \input{src/Requisiti/src/RequisitiQualitativi.tex}
