--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-igienizzazionePostazioni.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-igienizzazionePostazioni.tex
@@ -1,5 +1,5 @@
 \subsection{Igienizzazione Postazioni}
-
+%TODO cambiare la foto
 \begin{figure}[H]
   \centering
     \includegraphics[width=\textwidth]{src/CasiDUso/immagini/UC-igienizzazionePostazioni.png}
